--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Helvetica, sans-serif;
+    font-family: sans-serif;
     font-size: 18px;
     margin: 5% 20% 5% 20%;
     padding: 2% 5% 5% 5%;
@@ -10,7 +10,7 @@ body {
 
 
 H2 {
-    font-family: "Book Antiqua", Palatino, serif;
+    font-family: serif;
     margin-bottom: 60px;
     margin-bottom: 40px;
     padding: 5px;
@@ -22,7 +22,7 @@ H2 {
 
 
 H3 {
-    font-family: "Book Antiqua", Palatino, serif;
+    font-family: serif;
     margin-top: 40px;
     margin-bottom: 30px;
     border-bottom: 1px LightGrey solid;
