--- a/main.css
+++ b/main.css
@@ -1,4 +1,97 @@
 body {
+    font-family: Georgia, Helvetica, sans-serif;
+    font-size: 18px;
+    margin: 5% 20% 5% 20%;
+    padding: 2% 5% 5% 5%;
+    width: 50%;
+    line-height: 150%;
+    border: 1px solid LightGrey;
+}
+
+H1 {
+    font-family: "Book Antiqua", Palatino, serif;
+}
+
+H2 {
+    font-family: "Book Antiqua", Palatino, serif;
+    margin-bottom: 60px;
+    margin-bottom: 40px;
+    padding: 5px;
+    border-bottom: 2px LightGrey solid;
+    width: 90%;
+    line-height: 150%;
+    color: DarkGreen;
+}
+
+
+H3 {
+    font-family: "Book Antiqua", Palatino, serif;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    border-bottom: 1px LightGrey solid;
+    width: 80%;
+    line-height: 150%;
+    color: DarkBlue;
+}
+
+
+P {
+    margin-bottom: 30px;
+}
+
+li {
+    margin-left: 10px;
+}
+
+
+blockquote {
+    border-left: 4px lightgrey solid;
+    padding-left: 5px;
+    margin-left: 20px;
+}
+
+
+pre {
+    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy;
+    font-size: 75%;
+    border: solid 1px #CC929A;
+    background-color: Ivory;
+    padding: 5px;
+    line-height: 130%;
+    margin-left: 10px;
+    width: 95%;
+}
+
+
+code {
+    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy;
+    font-size: 90%;
+}
+
+
+a {
+    text-decoration: none;
+    font-size: 90%;
+    cursor: crosshair;
+}
+
+
+a:hover {
+	background-color: LightGrey;
+}
+
+
+img {
+    margin-left: 10px;
+}
+
+
+hr {
+    color: LightGrey;
+}
+
+
+body {
     font-family: Georgia, sans-serif;
     font-size: 18px;
     margin: 5% 20% 5% 20%;
