--- a/main.css
+++ b/main.css
@@ -67,8 +67,9 @@ code {
 
 a {
     text-decoration: none;
-    font-size: 90%;
     cursor: crosshair;
+    background-color: #FAFAF2;
+    border: 1px dashed #7AFAD2; 
 }
 
 
